--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "author": "Shivaraj M Shetty",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
