--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
