--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-wavify": "^1.10.0",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
