--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scroll": "^1.9.0",
     "react-wavify": "^1.10.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
