--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
