--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-wavify": "^1.10.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
