--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "react-wavify": "^1.10.0",
     "redux": "^5.0.1",
